Prevent horizontal scroll, wrap intstead (#2899)

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -830,7 +830,9 @@ table tr.table-header {
     word-wrap: break-word;
     border-radius: 3px;
     background-color:white;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 .post_box a {
